# GroupProjectCOP3530

./: CMakeLists.txt  Conditions.cpp  Conditions.h  Main.cpp  Maxheap.cpp  Maxheap.h  Patients.cpp  Patients.h  dataGenerator.py  input11.txt
